--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,9 @@ jobs:
     steps:
     - uses: actions/checkout@v6
     - name: Install Poetry
-      run: pip install poetry==2.0.1
+      run: |
+        pip install poetry==2.0.1
+        poetry self add poetry-audit-plugin
     - name: Set up Python 3.10
       uses: actions/setup-python@v6
       with:
@@ -51,7 +53,9 @@ jobs:
     steps:
     - uses: actions/checkout@v6
     - name: Install Poetry
-      run: pip install poetry==2.0.1
+      run: |
+        pip install poetry==2.0.1
+        poetry self add poetry-audit-plugin
     - name: Set up Python 3.10
       uses: actions/setup-python@v6
       with:
