--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,9 +33,7 @@ jobs:
     steps:
     - uses: actions/checkout@v6
     - name: Install Poetry
-      run: |
-        pip install poetry==2.0.1
-        poetry self add poetry-audit-plugin
+      run: pip install poetry==2.0.1 poetry-audit-plugin
     - name: Set up Python 3.10
       uses: actions/setup-python@v6
       with:
@@ -53,9 +51,7 @@ jobs:
     steps:
     - uses: actions/checkout@v6
     - name: Install Poetry
-      run: |
-        pip install poetry==2.0.1
-        poetry self add poetry-audit-plugin
+      run: pip install poetry==2.0.1 poetry-audit-plugin
     - name: Set up Python 3.10
       uses: actions/setup-python@v6
       with:
