fix: migration to new plugin class (#2)

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ coverage.lcov
 # build specific artifacts
 dist
 
+# virtual environments
+venv/
+.venv/
+env/
 
 # IDE-specific directories
 .vscode
